# NikhefProjectGeant4Student

./: .gitignore  CMAKELists.txt  CMakeLists.txt  Dockerfile  README.md  main.cc
.devcontainer/: devcontainer.json
include/: ActionInit.hh  DetConstruction.hh  PrimaryGenAction.hh  SteppingAction.hh
src/: ActionInit.cc  DetConstruction.cc  PrimaryGenAction.cc  SteppingAction.cc
